tests/bad_syntax/invalid_state.rs
use umlstate::umlstate;

umlstate! {
    machine Foo {
        state a;
        A + E => B;
    }
}

fn main() {}
